[package]

name = "diffusion"
version = "0.6.1"
authors = ["Wangshan Lu <wisagan@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/WiSaGaN/rust-diffusion"
homepage = "https://github.com/WiSaGaN/rust-diffusion"
description = """
This is the rust implementation of diffusion library. Diffusion is an effcient message-based data distribution library.
"""


[[bin]]

name = "file_reader"
path = "src/bin/file_reader.rs"

[[bin]]

name = "file_writer"
path = "src/bin/file_writer.rs"

[[bin]]

name = "multicast_writer"
path = "src/bin/multicast_writer.rs"

[[bin]]

name = "multicast_reader"
path = "src/bin/multicast_reader.rs"
